refactored unit test code